refactor: 최신 문법으로 변경